--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+dub.selections.json
 .dub
 docs.json
 __dummy.html
@@ -11,3 +12,5 @@ docs/
 *.dlangidews
 *.dlangidews.wssettings
 *.settings
+*.sublime*
+*.zt
